<resources>
    <string name="app_name">MyApplication</string>
    <string name="get_started">Get Started</string>
    <string name="create_account">by creating a free account</string>
    <string name="full_name_hint">Full Name</string>
    <string name="email_hint">Enter your email</string>
    <string name="phone_number_hint">Phone Number</string>
    <string name="password_hint">Password</string>
    <string name="terms_text">By checking the box you agree to our terms and conditions</string>
    <string name="next_button">Next</string>
    <string name="welcome_back">Welcome back</string>
    <string name="sign_in">Sign in to access your account</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="new_member">New Member?</string>
    <string name="register_now">Register Now</string>
    <string name="already_member">Already a member?</string>
    <string name="login_now">Log In</string>
    <string name="success_signed_in">Signed in</string>
    <string name="error_email_required">Email is required</string>
    <string name="error_invalid_email">Invalid email format</string>
    <string name="error_password_required">Password is required</string>
    <string name="error_password_invalid">Password must be at least 8 characters</string>
    <string name="error_remember_me_required">Please check the &quot;Remember me&quot; box</string>
    <string name="error_terms_and_conditions_required">Please check the Terms and Conditions box</string>
    <string name="error_name_required">Full Name is required</string>
    <string name="error_phone_number_required">Phone number must be at least 10 digits</string>
    <string name="error_invalid_credentials">Invalid credentials</string>
    <string name="error_email_already_used">This email is already registered</string>
    <string name="success_registration">Registration successful</string>
    <string name="change_fragment">Change fragment</string>
</resources>