<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/register_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">


    <RelativeLayout
        android:id="@+id/imageContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="196dp"
            android:layout_height="188dp"
            android:layout_marginTop="20dp"
            app:srcCompat="@drawable/welcome" />


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/get_started"
            android:layout_centerInParent="true"
            android:text="@string/get_started"
            android:textSize="20sp"
            style="@style/CommonTextView"/>


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/free_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/get_started"
            android:layout_centerHorizontal="true"
            android:text="@string/create_account"
            android:textColor="@color/black"
            android:layout_marginTop="100dp" />
    </RelativeLayout>



    <com.google.android.material.textfield.TextInputLayout

        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/imageContainer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/CommonTextInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/full_name"
            android:drawableRight="@drawable/user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/full_name_hint"
            android:inputType="textPersonName"
            android:background="@drawable/rounded_corner"/>
    </com.google.android.material.textfield.TextInputLayout>



    <com.google.android.material.textfield.TextInputLayout

        android:layout_marginTop="100dp"
        app:layout_constraintTop_toBottomOf="@id/imageContainer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/CommonTextInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phone_number"
            android:drawableRight="@drawable/smartphone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_number_hint"
            android:inputType="phone"
            android:background="@drawable/rounded_corner"/>
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="180dp"
        app:layout_constraintTop_toBottomOf="@id/imageContainer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/CommonTextInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editEmail"
            android:drawableRight="@drawable/mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:background="@drawable/rounded_corner"/>
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="260dp"
        app:layout_constraintTop_toBottomOf="@id/imageContainer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/CommonTextInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editPassword"
            android:drawableRight="@drawable/lock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:background="@drawable/rounded_corner"/>
    </com.google.android.material.textfield.TextInputLayout>



    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/checkBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="340dp"
        android:layout_marginStart="50dp"
        android:text="@string/terms_text"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/imageContainer"
        app:layout_constraintStart_toStartOf="parent" />



    <com.google.android.material.button.MaterialButton
        android:id="@+id/next_button"
        android:layout_marginTop="10dp"
        android:text="@string/next_button"
        app:layout_constraintTop_toBottomOf="@id/checkBox"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/CommonButton"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/already_member"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already_member"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/next_button"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="100dp"/>



    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_now_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_now"
        android:textColor="@color/black"
        android:backgroundTint="@android:color/transparent"
        android:strokeColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/next_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="6dp"
        android:layout_marginStart="100dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
